--- a/assignment3_framework.ipynb
+++ b/assignment3_framework.ipynb
@@ -10,10 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
    "id": "48b9b409",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-14T07:35:05.808080Z",
+     "start_time": "2024-06-14T07:35:05.130997Z"
+    }
+   },
    "source": [
     "# Please don't change this cell\n",
     "\n",
@@ -22,16 +25,36 @@
     "\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
    "id": "6c328a40",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-14T07:35:05.862316Z",
+     "start_time": "2024-06-14T07:35:05.810023Z"
+    }
+   },
+   "source": [
+    "# Please don't change this cell\n",
+    "df = pd.read_csv('ml-100k/u.data', names=['user_id', 'item_id', 'rating', 'timestamp'], sep='\\t')\n",
+    "\n",
+    "df.head()"
+   ],
    "outputs": [
     {
      "data": {
+      "text/plain": [
+       "   user_id  item_id  rating  timestamp\n",
+       "0      196      242       3  881250949\n",
+       "1      186      302       3  891717742\n",
+       "2       22      377       1  878887116\n",
+       "3      244       51       2  880606923\n",
+       "4      166      346       1  886397596"
+      ],
       "text/html": [
        "<div>\n",
        "<style scoped>\n",
@@ -96,14 +119,6 @@
        "  </tbody>\n",
        "</table>\n",
        "</div>"
-      ],
-      "text/plain": [
-       "   user_id  item_id  rating  timestamp\n",
-       "0      196      242       3  881250949\n",
-       "1      186      302       3  891717742\n",
-       "2       22      377       1  878887116\n",
-       "3      244       51       2  880606923\n",
-       "4      166      346       1  886397596"
       ]
      },
      "execution_count": 2,
@@ -111,12 +126,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# Please don't change this cell\n",
-    "df = pd.read_csv('ml-100k/u.data', names=['user_id', 'item_id', 'rating', 'timestamp'], sep='\\t')\n",
-    "\n",
-    "df.head()"
-   ]
+   "execution_count": 2
   },
   {
    "cell_type": "markdown",
@@ -129,36 +139,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
    "id": "f55c0fda",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "943 users\n",
-      "1682 items\n",
-      "Construct the rating matrix based on train_df:\n",
-      "[[0. 3. 4. ... 0. 0. 0.]\n",
-      " [4. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " ...\n",
-      " [5. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 5. 0. ... 0. 0. 0.]]\n",
-      "Construct the rating matrix based on test_df:\n",
-      "[[5. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " ...\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]\n",
-      " [0. 0. 0. ... 0. 0. 0.]]\n",
-      "Testsize = 17678\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-14T07:35:06.948747Z",
+     "start_time": "2024-06-14T07:35:05.864329Z"
     }
-   ],
+   },
    "source": [
     "# please do not change this cell\n",
     "\n",
@@ -196,7 +183,35 @@
     "print(test_ds)\n",
     "\n",
     "print(\"Testsize = \" + str(testsize))"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "943 users\n",
+      "1682 items\n",
+      "Construct the rating matrix based on train_df:\n",
+      "[[0. 3. 4. ... 0. 0. 0.]\n",
+      " [4. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [5. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 5. 0. ... 0. 0. 0.]]\n",
+      "Construct the rating matrix based on test_df:\n",
+      "[[5. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " ...\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]\n",
+      " [0. 0. 0. ... 0. 0. 0.]]\n",
+      "Testsize = 17678\n"
+     ]
+    }
+   ],
+   "execution_count": 3
   },
   {
    "cell_type": "markdown",
@@ -208,10 +223,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
    "id": "b927f55e",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-14T07:35:06.956103Z",
+     "start_time": "2024-06-14T07:35:06.950790Z"
+    }
+   },
    "source": [
     "# Please don't change this cell\n",
     "# you can use this devaluate Utils here, and you can also implement your own MAE and RMSE calculation. \n",
@@ -230,7 +248,9 @@
     "    RMSE = np.sqrt(np.sum(np.square(test_ds[mask_test_ds] - predicted_ds[mask_test_ds])) / np.sum(mask_test_ds.astype(np.float32)))\n",
     "\n",
     "    return MAE, RMSE"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 4
   },
   {
    "cell_type": "markdown",
@@ -242,10 +262,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
    "id": "4f2f81aa",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-14T07:35:06.960803Z",
+     "start_time": "2024-06-14T07:35:06.957111Z"
+    }
+   },
    "source": [
     "# Write your code here\n",
     "# You are required to implement the required solution here. \n",
@@ -256,13 +279,25 @@
     "MAE = 0 # 0 is an intial value, you need to update this with the actual perofrmance of your implementation.\n",
     "RMSE = 0 # 0 is an intial value, you need to update this with the actual perofrmance of your implementation.\n",
     "\n"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 5
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
    "id": "6e89b6a0",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-06-14T07:35:06.965825Z",
+     "start_time": "2024-06-14T07:35:06.961809Z"
+    }
+   },
+   "source": [
+    "# Please don't change this cell\n",
+    "\n",
+    "print(\"===================== The MAE and RMSE of Your Implementation =====================\")\n",
+    "print(\"MAE: {}, RMSE: {}\" .format(MAE, RMSE))"
+   ],
    "outputs": [
     {
      "name": "stdout",
@@ -273,20 +308,7 @@
      ]
     }
    ],
-   "source": [
-    "# Please don't change this cell\n",
-    "\n",
-    "print(\"===================== The MAE and RMSE of Your Implementation =====================\")\n",
-    "print(\"MAE: {}, RMSE: {}\" .format(MAE, RMSE))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "29727e2d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 6
   }
  ],
  "metadata": {
